--- a/software/src/omaha/templates/components/paging-controller.html
+++ b/software/src/omaha/templates/components/paging-controller.html
@@ -8,6 +8,10 @@
 <link rel="import" href="/bower_components/paper-button/paper-button.html">
 <!--<link rel="import" href="/bower_components/paper-checkbox//paper-checkbox.html">-->
 
+
+THIS FILE IS DEPRECATED; SHOULD NOT BE USED AT ALL
+
+
 <dom-module id="paging-controller">
   <template>
     <style>
