--- a/software/src/omaha/templates/components/equalizer-controller.html
+++ b/software/src/omaha/templates/components/equalizer-controller.html
@@ -85,9 +85,9 @@
 
         <paper-radio-group id="equalizerSelector" selected="{{mode}}">
           <!-- <paper-radio-button id="informationButton" name="information" class="flex">Information</paper-radio-button> -->
-          <paper-radio-button id="maskingButton" name="masking"  onclick="equalizerChanged()" class="flex">Masking</paper-radio-button>
-          <paper-radio-button id="musicButton"   name="music"    onclick="musicChanged()"     class="flex">Music</paper-radio-button>
-          <paper-radio-button id="pagingButton"  name="paging"                                class="flex">Paging</paper-radio-button>
+          <paper-radio-button id="maskingButton" name="masking"  onclick="modeChanged('masking')"   class="flex">Masking</paper-radio-button>
+          <paper-radio-button id="musicButton"   name="music"    onclick="modeChanged('music')"     class="flex">Music</paper-radio-button>
+          <paper-radio-button id="pagingButton"  name="paging"   onclick="modeChanged('paging')"    class="flex">Paging</paper-radio-button>
         </paper-radio-group>
 
         <neon-animated-pages attr-for-selected="page" selected="[[mode]]" class="flex">
@@ -202,11 +202,11 @@
     </div>
     </paper-dialog>
 
-    <paper-dialog id="switchingEQModeDialog" heading="this is a title" entry-animation="scale-up-animation" exit-animation="fade-out-animation" modal="true">
+    <paper-dialog id="switchingEQModeDialog" heading="this is a title" entry-animation="scale-up-animation" exit-animation="fade-out-animation" modal="true" style="height: 250px; width: 500px;">
       <h2 style="text-align: center; padding-top: 24px; padding-bottom: 5px; margin: 0px;">Warning</h2>
       <div id="eqmode" style="text-align: center; margin-top: 0px; padding: 5% 5% 5% 5%;">
       </div>
-      <div class="butons" style="margin: 0; border-top: 1px rgba(201, 201, 201, .6) solid; padding: 5%;">
+      <div class="butons" style="position: absolute; left: 60px; top: 150px; margin: 0; border-top: 1px rgba(201, 201, 201, .6) solid; padding: 5%;">
       <paper-button ondialog-confirm style="margin: 0.5em 1em 0.5em 1em;" on-click="_switchPressed">Switch</paper-button>
       <paper-button dialog-dismiss on-click="_cancelSwitchPressed">Cancel</paper-button></div>
     </paper-dialog>
@@ -231,7 +231,22 @@
               <paper-item id="Add New Preset" value="Add New Preset">Add New Preset</paper-item>   
           </paper-listbox>
         </paper-dropdown-menu>
+
         <paper-dropdown-menu class="papercardcenter" id="musicMenu" style="position: absolute; left: 48.5%; visibility: hidden;" no-label-float label="Music Preset:">
+          <paper-listbox id="musicListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
+            <!--<template if="{{this.speaker.Response}}">
+              <paper-dropdown-menu selected="{{selected}}">
+                <template repeat="{{label in this.speaker.PresetNames}}">
+                  <paper-item value="{{i}}" label="{{label}}"></paper-item>
+                </template>
+              </paper-dropdown-menu>  
+            </template>-->
+              <paper-item id="Currently Applied" value="Currently Applied">Currently Applied</paper-item>
+              <paper-item id="Add New Preset" value="Add New Preset">Add New Preset</paper-item>  
+          </paper-listbox>
+        </paper-dropdown-menu>
+
+        <paper-dropdown-menu class="papercardcenter" id="pagingMenu" style="position: absolute; left: 48.5%; visibility: hidden;" no-label-float label="Paging Preset:">
           <paper-listbox id="musicListbox" attr-for-selected="value" selected="{{selection}}" class="dropdown-content" value="0">
             <!--<template if="{{this.speaker.Response}}">
               <paper-dropdown-menu selected="{{selected}}">
@@ -352,7 +367,7 @@
 
   var iirConstants = [];
 
-  for(loopVar = 0; loopVar < 21; loopVar++) { // watch out! we got a static over here
+  for(loopVar = 0; loopVar < 63; loopVar++) { // watch out! we got a static over here
     iirConstants[loopVar] = 0;
   }
   console.log(iirConstants);
@@ -376,17 +391,40 @@
     document.querySelector("#switchingEQModeDialog").toggle();
   }
 
-  function musicChanged() {
-    musicMenu.style.visibility = "visible";
-    equalizerMenu.style.visibility = "hidden";
-    showEqualizerSwitchDialog("music");
+  function modeChanged(mode) {
+
+    switch(mode) {
+      case "masking":
+        musicMenu.style.visibility = "hidden";
+        equalizerMenu.style.visibility = "visible";
+        pagingMenu.style.visibility = "hidden";
+        showEqualizerSwitchDialog("masking");
+        break;
+
+      case "music":
+        equalizerMenu.style.visibility = "hidden";
+        musicMenu.style.visibility = "visible";
+        pagingMenu.style.visibility = "hidden";
+        showEqualizerSwitchDialog("music");
+        break;
+      
+      case "paging":
+        musicMenu.style.visibility = "hidden";
+        equalizerMenu.style.visibility = "hidden";
+        pagingMenu.style.visibility = "visible";
+        showEqualizerSwitchDialog("paging");
+        break;
+
+      default: 
+        console.log("SOMETHING WAS WRONG WITH WHAT WAS PASSED TO modeChanged()");
+    }
+
+
+
 
   }
 
   function equalizerChanged() {
-    musicMenu.style.visibility = "hidden";
-    equalizerMenu.style.visibility = "visible";
-    showEqualizerSwitchDialog("masking");
   }
 
 
@@ -808,6 +846,7 @@ $(function() {
 
       //console.log(this);
 
+      console.log("this is me, the eq: ", i);
       $(this).slider({
         orientation: "vertical",
         range: "min",
@@ -817,10 +856,17 @@ $(function() {
         value: 0,
         slide: function( event, ui) {
           isThereAnError = false;
-          sliders[i + (typeFound * 21)].style.background = "#3f51b5";
+
+          /* sliders[i + (typeFound * 21)].style.background = "#3f51b5";
           handles[i + (typeFound * 21)].style.background = "#3f51b5";
           background[i + (typeFound * 21)].style.background = "rgba(63, 81, 181, .2)";
-          $("#text" + (i + (typeFound * 21) + 1)).val(ui.value);
+          $("#text" + (i + (typeFound * 21) + 1)).val(ui.value); */
+
+          sliders[i].style.background = "#3f51b5";
+          handles[i].style.background = "#3f51b5";
+          background[i].style.background = "rgba(63, 81, 181, .2)";
+          $("#text" + (i + 1)).val(ui.value);
+
           iirConstants[i] = ui.value;
         }
       });
