--- a/software/src/omaha/templates/components/speaker-controller.html
+++ b/software/src/omaha/templates/components/speaker-controller.html
@@ -13,6 +13,12 @@
 <link rel="import" href="/components/paging-controller.html">
 <link rel="import" href="/components/scheduling-controller.html">
 
+<link rel="stylesheet" href="jquery-ui-1.11.4.css">
+<script src="jquery-1.10.2.js" type="text/jscript"></script>
+<script src="Chart.js" type="text/jscript"></script>
+<script src="jquery-ui-1.11.4.js" type="text/jscript"></script>
+<script src="jquery.ui.touch-punch.js" type="text/jscript"></script>
+
 <!--<link rel="import" href="/components/map-controller.html">-->
 <dom-module id="speaker-controller">
   <template>
@@ -92,7 +98,7 @@
         <paper-radio-button id="averagingButton"  name="averaging"  class="flex">Comfort Ratio</paper-radio-button>
         <paper-radio-button id="targetButton"     name="target"     class="flex">Target</paper-radio-button>
         <paper-radio-button id="equalizerButton"  name="equalizer"  class="flex">Equalizers</paper-radio-button>
-        <paper-radio-button id="pagingButton"     name="paging"     class="flex">Paging</paper-radio-button>
+        <paper-radio-button id="pagingButtonRC"     name="paging"     class="flex">Paging</paper-radio-button>
         <paper-radio-button id="schedulingButton" name="scheduling" class="flex">Scheduling</paper-radio-button>
       </paper-radio-group>
     </div>
@@ -128,7 +134,7 @@
         </simple-fit>
       </neon-animatable>
 
-      <neon-animatable page="scheduling" class="layout horizontal" entry-animation="slide-from-right-animation" exit-animation="slide-left-animation">
+      <neon-animatable page="scheduling" class="layout horizontal" entry-animation="slide-from-right-animation" exit-animation="slide-right-animation">
         <simple-fit class="container">
            <scheduling-controller center-center page="scheduling" id="scheduling"></scheduling-controller>
         </simple-fit>
@@ -279,11 +285,6 @@
         console.log("_volumeUpdate " + this.volumeLevel);
       },
 
-      me: function() {
-        console.log(document.getElementById("target-selector"));
-
-      },
-
       _pagingUpdate: function() {
         if(this.isReady) {
           var updatedAttributes = ["paging"];
@@ -393,6 +394,10 @@
         this.isReady = true;
       }
     });
+  
+  (function hideSomething() {
+    
+  })();
 
 
   /*if(/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
